# wtma

./: .gitignore  LICENSE  README.md  pyproject.toml
p/: log.json  main.py  pyproject.toml  t.py
src/wtma/: __init__.py  main.py
