[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtma"]

[tool.uv.workspace]
members = [
    "p",
]

[project]
name = "wtma"
version = "0.1.1"
description = "ASGI middleware that logs every IP's geolocation, last visit, reverse DNS and much more!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.41.0",
]
